--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,7 @@
   "tabWidth": 2,
   "semi": true,
   "singleQuote": true,
+  "endOfLine": "auto",
   "importOrder": ["^@core/(.*)$", "^@server/(.*)$", "^@ui/(.*)$", "^[./]"],
   "importOrderSortSpecifiers": true,
   "plugins": ["@trivago/prettier-plugin-sort-imports"]
