--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-intersection-observer": "^9.16.0",
     "react-redux": "^9.2.0",
+    "react-responsive": "^10.0.1",
     "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.13"
   },
